# elysium

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  Makefile.local.toml  Makefile.toml  README.md
crates/elysium_buckshot/: Cargo.toml
crates/elysium_buckshot/benches/: bench.rs
crates/elysium_buckshot/benches/benchmarks/: mod.rs
crates/elysium_buckshot/src/: lib.rs
crates/elysium_cli/: Cargo.toml
crates/elysium_cli/src/: lib.rs
crates/elysium_cli/src/cli/: foo.rs  mod.rs  okey.rs  version.rs
crates/elysium_cli/src/err/: mod.rs
crates/elysium_cli/src/logging/: mod.rs
crates/elysium_core/: Cargo.toml
crates/elysium_core/src/: lib.rs
crates/elysium_core/src/cst/: mod.rs
crates/elysium_core/src/env/: mod.rs
crates/elysium_game/: Cargo.toml
crates/elysium_game/benches/: bench.rs
crates/elysium_game/benches/benchmarks/: mod.rs
crates/elysium_game/benches/benchmarks/okey/: mod.rs  test_pairs.rs  test_run.rs  test_set.rs  test_win.rs
crates/elysium_game/src/: lib.rs
crates/elysium_game/src/okey_mahjong/: cond.rs  mod.rs  parser.rs  types.rs
crates/elysium_game/tests/: okey_tests.rs
