[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1

[profile.bench]
strip = false

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-log = { version = "0.2.16", features = ["trace"] }
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
